fix the overflow issue on home

--- a/consultm/src/Components/ContactUsForm.module.css
+++ b/consultm/src/Components/ContactUsForm.module.css
@@ -126,7 +126,7 @@ li{
     border: none;
     padding: 0.5rem;
     width: 50%;
-    min-width:150px;
+    min-width:160px;
     margin-top: 1rem;
     font: inherit;
     cursor: pointer;
