--- a/consultm/src/Global.css
+++ b/consultm/src/Global.css
@@ -19,7 +19,7 @@
 
 body {
   overflow-y: scroll;
-  height: 100vh;
+  height: 100%;
 }
 
 a {
